<resources>
    <string name="app_name">Learn CVN</string>

    <string name="clr_orange">Orange</string>
    <string name="clr_blue">Blue</string>
    <string name="clr_green">Green</string>
    <string name="clr_yellow">Yellow</string>
    <string name="clr_red">Red</string>
    <string name="clr_black">Black</string>
    <string name="clr_white">White</string>
    <string name="clr_brown">Brown</string>

    <string name="num_zero">Zero</string>
    <string name="num_one">One</string>
    <string name="num_two">Two</string>
    <string name="num_three">Three</string>
    <string name="num_four">Four</string>
    <string name="num_five">Five</string>
    <string name="num_six">Six</string>
    <string name="num_seven">Seven</string>
    <string name="num_eight">Eight</string>
    <string name="num_nine">Nine</string>

    <string name="veh_moto">Motorcycle</string>
    <string name="veh_car">Car</string>
    <string name="veh_truck">Truck</string>
    <string name="veh_bus">Bus</string>
    <string name="veh_boat">Boat</string>
    <string name="veh_bike">Bicycle</string>

    <string name="btn_colors">Colors</string>
    <string name="btn_vehicles">Vehicles</string>
    <string name="btn_numbers">Numbers</string>
    <string name="btn_google_play">More games</string>

    <string name="btn_learn">Learn</string>
    <string name="btn_train">Train</string>

    <string name="btn_train_eye">Find</string>
    <string name="btn_train_write">Write</string>

    <string name="img_logo_toolbar">TODO</string>
    <string name="img_logo_invisible">TODO</string>
    <string name="img_return">TODO</string>
    <string name="img_logo_menu">TODO</string>
    <string name="ic_reload">TODO</string>

    <string name="text_train_menu">What do you want to train?</string>
    <string name="text_learn_menu">What do you want to discover?</string>


    <string-array name="languages_array">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>