<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F2F2F2"
    android:layout_height="match_parent"
    android:id="@+id/train_menu_frag"
    tools:context=".fragments.MenuTrainFrag"
    android:clickable="true">


    <Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#595959"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_return"
            android:src="@mipmap/ic_return_foreground"
            android:visibility="visible"
            android:layout_gravity="left"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp" />

        <ImageView
            android:id="@+id/img_logo_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_logo_toolbar"
            android:src="@mipmap/ic_logo_foreground"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="28dp" />
    </Toolbar>

    <TextView
        android:id="@+id/tv_train"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_train_menu"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="480dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_train"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@mipmap/ic_colors_foreground" />

        <Button
            android:id="@+id/btn_color_game"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="20dp"
            android:background="#595959"
            android:padding="0dp"
            android:text="@string/btn_colors" />

        <ImageView
            android:id="@+id/img_veh_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            app:srcCompat="@mipmap/ic_car_foreground" />

        <Button
            android:id="@+id/btn_vehicles_game"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="#595959"
            android:text="@string/btn_vehicles" />

        <ImageView
            android:id="@+id/img_num_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@mipmap/ic_nums_foreground" />

        <Button
            android:id="@+id/btn_numbers_game"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="#595959"
            android:text="@string/btn_numbers" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>