<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:id="@+id/color_game_frag"
    tools:context=".fragments.ColorsGameFrag">

    <Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#595959"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_return"
            android:src="@mipmap/ic_return_foreground"
            android:visibility="visible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp" />

        <ImageView
            android:id="@+id/img_logo_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_logo_toolbar"
            android:src="@mipmap/ic_logo_foreground"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="28dp" />
    </Toolbar>


    <ImageView
        android:id="@+id/img_reload"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/ic_reload"
        android:src="@mipmap/ic_reload_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/girdL_col"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"

        android:layout_marginTop="32dp"

        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/img_reload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_color"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_color_1"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_color_3"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_color_2"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_color_4"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />
    </GridLayout>

    <TextView
        android:id="@+id/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>